--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "postinstall": "npm run db:generate",
     "lint": "eslint .",
     "db:generate": "drizzle-kit generate"
   },
