--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/ui": "^2.17.0",
     "@nuxthub/core": "^0.7.0",
+    "crypto-js": "^4.2.0",
     "nuxt": "^3.12.2",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
