feat: add image editing in profile

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@nuxt/eslint": "^0.3.13",
     "@nuxt/ui": "^2.17.0",
     "@nuxthub/core": "^0.7.0",
+    "@types/uuid": "^10.0.0",
+    "cropperjs": "^1.6.2",
     "crypto-js": "^4.2.0",
     "nuxt": "^3.12.2",
     "tippy.js": "^6.3.7",
+    "uuid": "^10.0.0",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0",
     "vue3-calendar-heatmap": "^2.0.5"
